apps/homelab/uptime-kuma/uptime-kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1.23.17 # {"$imagepolicy": "flux-system:uptime-kuma"}
          name: uptime-kuma
          resources: {}
          ports:
            - containerPort: 3001
              name: http
          volumeMounts:
            - mountPath: "/app/data"
              name: uptime-kuma-app-data-static
      volumes:
        - name: uptime-kuma-app-data-static
          persistentVolumeClaim:
            claimName: uptime-kuma-app-data-static
