apps/homelab/uptime-kuma/uptime-kuma-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  ports:
    - port: 3001
      protocol: TCP
  selector:
    app: uptime-kuma
